@@ -4,10 +4,10 @@ name = App-MCP-Worker
 perl              = 5.010001
 namespace::autoclean    = 0.19
 Authen::HTTP::Signature = 0.02
-Class::Usul       = v0.45.0
+Class::Usul       = v0.51.0
 Crypt::SRP        = 0.013
 Data::Record      = 0.02
-File::DataClass   = v0.44.0
+File::DataClass   = v0.52.0
 HTTP::Message     = 6.06
 JSON::MaybeXS     = 1.002002
 LWP               = 6.08
@@ -16,7 +16,7 @@ Moo               = 1.005000
 Regexp::Common    = 2013031301
 Try::Tiny         = 0.22
 Type::Tiny        = 0.046
-Unexpected        = v0.28.0
+Unexpected        = v0.34.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
